--- a/section-48.adoc
+++ b/section-48.adoc
@@ -1,285 +1,223 @@
 [#48_0]
-== SEQUENCE OF PLAY
-(Logistics Game)
+== SEQUENCE OF PLAY (Logistics Game)
 
 COMMENTARY:
 
-It is possible to use the Logistics rules in concert
-with the Land Game and omit the Air Game rules.
-If that is the desire of the players, they should ignore all part of the following Sequence marked
-“Air Game Only.”'
+It is possible to use the Logistics rules in concert with the Land Game and omit
+the Air Game rules.  If that is the desire of the players, they should ignore
+all part of the following Sequence marked "Air Game Only"
 
 GENERAL RULE:
 
-Play of the game should proceed in accordance
-with the following outline.
+Play of the game should proceed in accordance with the following outline.
 
-I. INITIATIVE DETERMINATION PHASE
+[upperroman]
+. INITIATIVE DETERMINATION PHASE
 The Players determine who will have the initiative
 for the coming Game Turn. (See <<7_0>>) The Player
 going first within the Operations Stage (see below)
 is known as "Player A" and the other is "Player
 B.”
 
-Il. STRATEGIC AIR PLANNING STAGE (Air
-Game Only)
+. STRATEGIC AIR PLANNING STAGE (Air Game Only)
 
-A. Designation Phase:
-The Players assign their airplanes to fly Land Support or Strategic missions.
+A. Designation Phase: The Players assign their airplanes to fly Land Support or
+Strategic missions.
 
-B. Axis Malta Availability Determination Phase
-The Axis Player determines the amount of support
-he will receive from his abstracted N. African
-Theatre airforce for Raids on Malta.
+B. Axis Malta Availability Determination Phase The Axis Player determines the
+amount of support he will receive from his abstracted N. African Theatre
+airforce for Raids on Malta.
 
 C. Strategic Mission Assignment Phase
-
-Planes designated as flying Strategic missions are
-assigned. The Axis Player assigns his planes to
-Raids on Malta or naval convoy protection. The
-Commonwealth Player assigns his planes to naval
-missions or Bombing Reserve.
++
+Planes designated as flying Strategic missions are assigned. The Axis Player
+assigns his planes to Raids on Malta or naval convoy protection. The
+Commonwealth Player assigns his planes to naval missions or Bombing Reserve.
 
 D. Malta Raid Phase
++
+The Axis Player resolves flak suppression, antiaircraft fire and bombing
+missions against Maltese air facilities (Note that Commonwealth warships
+stationed at Valetta may only be attacked by Land Support Missions.)
 
-The Axis Player resolves flak suppression, antiaircraft fire and bombing missions against Maltese
-air facilities (Note that Commonwealth warships
-stationed at Valetta may only be attacked by Land
-Support Missions.)
-
-lll. NAVAL CONVOY STAGE
+. NAVAL CONVOY STAGE
 
 A. Naval Convoy Schedule Phase
++
+The Axis Player refers to the Axis Naval Convoy Level Chart and then to the Axis
+Convoy Capacity Table and rolls one die to determine the total tonnage available
+for the next Game-Turn. He then plans what specific cargoes the convoys will
+carry and their routes.
 
-The Axis Player refers to the Axis Naval Convoy
-Level Chart and then to the Axis Convoy Capacity
-Table and rolls one die to determine the total tonnage available for the next Game-Turn. He then
-plans what specific cargoes the convoys will carry
-and their routes.
-
-B. Convoy Resolution Phase (Segments 1 & 2: Air
-Game Only)
+B. Convoy Resolution Phase (Segments 1 & 2: Air Game Only)
 
 1. Naval Convoy Reconaissance Segment: The
-Allied Player resolves Strategic Convoy
-Reconaissance missions.
+Allied Player resolves Strategic Convoy Reconaissance missions.
 
-2. Convoy Lane Assignment Segment: Axis convoy protection aircraft are assigned CAP missions
-in specific Convoy Lanes. Commonwealth Bombing Reserve aircraft are assigned CAP, Flak Suppression or Convoy Bombing missions in specific
-convoy lanes.
+2. Convoy Lane Assignment Segment: Axis convoy protection aircraft are assigned
+CAP missions in specific Convoy Lanes. Commonwealth Bombing Reserve aircraft are
+assigned CAP, Flak Suppression or Convoy Bombing missions in specific convoy
+lanes.
 
-3. Convoy Bombing Segment: All air-to-air combat, Flak Suppression, anti-aircraft, and convoy
-bombing is carried out.
+3. Convoy Bombing Segment: All air-to-air combat, Flak Suppression,
+anti-aircraft, and convoy bombing is carried out.
 
-IV. STORES EXPENDITURE STAGE
+. STORES EXPENDITURE STAGE
 
-Both Players distribute and expend stores (Section
-51.0) to eligible units requiring them. Units not
-receiving required stores are noted. Players also
-adjust fuel and water storage levels for any losses
-as aresult of spillage or evaporation.
+Both Players distribute and expend stores (Section <<51_0>>) to eligible units
+requiring them. Units not receiving required stores are noted. Players also
+adjust fuel and water storage levels for any losses as aresult of spillage or
+evaporation.
 
-V. FIRST OPERATIONS STAGE
+. FIRST OPERATIONS STAGE
 
 A. Initiative Declaration Phase
-
-The Player who gained the initiative in Stage I now
-states whether he will be "Player A" or "Player
-B”' for this particular Operations Stage.
++
+The Player who gained the initiative in Stage I now states whether he will be
+"Player A" or "Player B" for this particular Operations Stage.
 
 B. Weather Determination Phase
-The player with initiative rolls for weather (Section
-
-29.0), All adjustments for unusual weather are
-made at this time, including any additional
-evaporation of fuel or water from hot weather.
++
+The player with initiative rolls for weather (Section <<29_0>>), All adjustments for
+unusual weather are made at this time, including any additional evaporation of
+fuel or water from hot weather.
 
 C. Organization Phase
-The following Segments are undertaken in any
-order desired.
-1. Water Distribution Segment: Players distribute
-water to eligible units requiring such.
-2. Reorganization Segment: Attachment and/or
-assignment of reinforcement, replacements, or
-any other non-assigned units including trucks may
-be undertaken. Detachment of attached units may
-also be done.
-3. Attrition Segment: Reductions of any units
-that have not been adequately supplied with water
-or stores is undertaken.
++
+The following Segments are undertaken in any order desired.
+1. Water Distribution Segment: Players distribute water to eligible units
+requiring such.
+2. Reorganization Segment: Attachment and/or assignment of reinforcement,
+replacements, or any other non-assigned units including trucks may be
+undertaken. Detachment of attached units may also be done.
+3. Attrition Segment: Reductions of any units that have not been adequately
+supplied with water or stores is undertaken.
 4. Construction Segment:
-a. Construction Completion Step: Any work
-scheduled for completion is finished, markers
-being removed or added as required. Units that
-have completed construction may be freely
-moved.
-b. Construction Initiation/Continuation Step:
-Any continuing or ensuing work on projects is
-noted. Any units involved in such work may not
-be moved (voluntarily) during the remainder of
-the current Operations Stage.
-
-a
-
-. Training Segment:
-
+a. Construction Completion Step: Any work scheduled for completion is finished,
+markers being removed or added as required. Units that have completed
+construction may be freely moved.
+b. Construction Initiation/Continuation Step: Any continuing or ensuing work on
+projects is noted. Any units involved in such work may not be moved
+(voluntarily) during the remainder of the current Operations Stage.
+5. Training Segment:
 a. Training Completion Step: Units and replacement points completing a level of training are
 noted and the effects applied.
-
-b. Training Initiation/Continuation Step: Any
-units beginning or continuing trainingare noted.
-They may not be moved (voluntarily) in the remainder of the Operations stage.
-
-6. Supply Distribution Segment: Supplies in the
-same hex as land units may be redistributed at this
-time, subject to the maximum innate capacity of
-the unit(s) and the hex. Trucks may be
-loaded/unloaded.
-
+b. Training Initiation/Continuation Step: Any units beginning or continuing
+trainingare noted.  They may not be moved (voluntarily) in the remainder of the
+Operations stage.
+6. Supply Distribution Segment: Supplies in the same hex as land units may be
+redistributed at this time, subject to the maximum innate capacity of the
+unit(s) and the hex. Trucks may be loaded/unloaded.
 7. Tactical Shipping Segment: Both players execute the transport of cargo between African
 poits. Note: Axis coastal ships are represented in
 the game by counters. Allied coastal shipping is
 not represented by counters, and is limited only by
 the port capacities.
-
-D. Naval Convoy Arrival Phase: All reinforcements, Replacement Points, and supplies
-scheduled for arrival (and actually arriving) appear in their designated ports of arrival or entrance
-hexes. Check Reinforcement Tables and convoy
-rules. The Axis Player plans for the arrival of
-future Replacement from the Axis Replacement.
-In his first Naval Convoy Arrival Phase of each
-month, the Commonwealth Player consults the
-Commonwealth Production System and determines how many Replacement Points he will
-receive two months hence and plans for their arrival.
-
+D. Naval Convoy Arrival Phase: All reinforcements, Replacement Points, and
+supplies scheduled for arrival (and actually arriving) appear in their
+designated ports of arrival or entrance hexes. Check Reinforcement Tables and
+convoy rules. The Axis Player plans for the arrival of future Replacement from
+the Axis Replacement.  In his first Naval Convoy Arrival Phase of each month,
+the Commonwealth Player consults the Commonwealth Production System and
+determines how many Replacement Points he will receive two months hence and
+plans for their arrival.
 E. Commonwealth Fleet Phase:
++
+1. Fleet Assignemts Segment: The Commonwealth Player assigns his ships to any
+sea or coastal hexes for bombardment purposes.
 
-1. Fleet Assignemts Segment: The Commonwealth
-Player assigns his ships to any sea or coastal hexes
-for bombardment purposes.
-
-2.-Fleet Repair Segment: Any repair work on ships
+2. Fleet Repair Segment: Any repair work on ships
 is undertaken at this time.
 
 F. Land Support Air Phase (Air Game only):
-
 Only those planes assigned to land support missions may be used in this Phase.
 
-1. Mission Assignment Segment: All planes that
-are fueled may be assigned missions by the Player.
-2. Mission Deployment Segment: Counters
-representing each type of plane assigned a mission
-are placed in their hex of assignment.
-
-3. Air-to-air Combat Resolution Segment: Combat between opposing aircraft, including any caused by scramble and interception, is resolved. Mis
-sion aborts may take place before combat resolution.
-
-4. Flak Resolution Segment: Aircraft in the same
-hex as Enemy anti-aircraft units undergo flak fire.
-5. Mission Completion Segment: All missions
-that can be completed (e.g., bombing, strafing,
-etc.) are completed. Aborts may take place here,
+1. Mission Assignment Segment: All planes that are fueled may be assigned
+missions by the Player.
+2. Mission Deployment Segment: Counters representing each type of plane assigned
+a mission are placed in their hex of assignment.
+3. Air-to-air Combat Resolution Segment: Combat between opposing aircraft,
+including any caused by scramble and interception, is resolved. Mis sion aborts
+may take place before combat resolution.
+4. Flak Resolution Segment: Aircraft in the same hex as Enemy anti-aircraft
+units undergo flak fire.
+5. Mission Completion Segment: All missions that can be completed (e.g.,
+bombing, strafing, etc.) are completed. Aborts may take place here,
 too.
+6. Return to Base Segment: All surviving aircraft are returned to their base of
+origin (excepting those on transfer missions and some other rare exceptions).
+7. Tactical Maintenance Segment: Both Players may attempt to ready all planes
+eligible to fly land support missions.
 
-6. Return to Base Segment: All surviving aircraft
-are returned to their base of origin (excepting
-those on transfer missions and some other rare exceptions).
-
-7. Tactical Maintenance Segment: Both Players
-may attempt to ready all planes eligible to fly land
-support missions.
-
-Reserve
-
-1
-
-G. Reserve Designation Phase:
-Player "A" designates which of his units he is
-placing in reserve status, indicating that with a
-
-‘reserve marker. (See Section <<18_0>>.)
+G. Reserve Designation Phase: Player "A" designates which of his units he is
+placing in reserve status, indicating that with a ‘reserve marker. (See Section
+<<18_0>>.)
 
 H. Movement And Combat Phase
++
+The following four Segments comprise the Movement and Combat Phase. Player "A"
+may, if he so wishes, repeat Segments 1 through 4 as many times as he desires
+within the restrictions of the continual movement rules  <<8_2>>). Each
+repetition must include all four segment.
 
-The following four Segments comprise the Movement and Combat Phase. Player "A" may, if he
-so wishes, repeat Segments 1 through 4 as many
-times as he desires within the restrictions of the
-continual movement rules  <<8_2>>). Each repetition
-must include all four segment.
+1. Movement Segment: All units, except trucks and tank recovery squadrons not in
+reserve and eligible to be moved may be moved. Non-Phasing Player ("A") may move
+units in accordance with the reaction movement rules (Case <<8_6>>).
 
-1. Movement Segment: All units, except trucks
-and tank recovery squadrons not in reserve and
-eligible to be moved may be moved. Non-Phasing
-Player ("A") may move units in accordance with
-the reaction movement rules (Case <<8_6>>).
-
-2. Breakdown Determination Segment: All
-vehicles and motorized units of both sides are
-checked for breakdown. Broken down vehicles are
-indicated with the appropriate marker.
+2. Breakdown Determination Segment: All vehicles and motorized units of both
+sides are checked for breakdown. Broken down vehicles are indicated with the
+appropriate marker.
 
 3. Combat Segment:
 
-a. Position Determintion Step: Both Players
-determine the "position" (front or back) of all
-gun and armor class units.
+a. Position Determintion Step: Both Players determine the "position" (front or
+back) of all gun and armor class units.
 
-b. Barrage Step: Both Players secretly plot and
-then execute any barrages.
+b. Barrage Step: Both Players secretly plot and then execute any barrages.
 
-c. Retreat Before Assault Step: Player “B” may
-retreat before assault any of his units eligible to be
-so moved.
+c. Retreat Before Assault Step: Player “B” may retreat before assault any of his
+units eligible to be so moved.
 
-d. Force Assignment Step: Both Players secretly
-assign TOE Strength Points to anti-armor or close
-assault. Player “‘A”' determines which assaults will
-be probes (although he need not reveal this decision) and which TOE Strength Points will be
-withheld from assault.
+d. Force Assignment Step: Both Players secretly assign TOE Strength Points to
+anti-armor or close assault. Player “‘A”' determines which assaults will be
+probes (although he need not reveal this decision) and which TOE Strength Points
+will be withheld from assault.
 
-e. Anti-Armor Step: Both Players simultaneously
-resolve any anti-armor fire, extracting any
-casualties. Destroyed tank markers are deployed
-as required. °
+e. Anti-Armor Step: Both Players simultaneously resolve any anti-armor fire,
+extracting any casualties. Destroyed tank markers are deployed as required. °
 
-f. Close Assault Step: Close assaults are resolved
-in any order determined by Player "A". He announces which of them are actually probes, after
-each is resolved.
+f. Close Assault Step: Close assaults are resolved in any order determined by
+Player "A". He announces which of them are actually probes, after each is
+resolved.
 
-4. Reserve Release. Segment: Player "A" may
-release any of his reserves that he wishes to.
+4. Reserve Release. Segment: Player "A" may release any of his reserves that he
+wishes to.
 
-J. Truck Convoy Movement Phase: Player "A"
-may move his Second and Third Line (unattached)
-Trucks, and any POW's and Guards.
+I. Truck Convoy Movement Phase: Player "A" may move his Second and Third Line
+(unattached) Trucks, and any POW's and Guards.
 
-K. Commonwealth Movement Phase: If Player
-“A” is the Commonwealth Player, he may utilize
-rail movement (Case <<8_9>>) to move landunits or
-supplies. Otherwise this Phase is omitted.
+J. Commonwealth Movement Phase: If Player "A" is the Commonwealth Player, he may
+utilize rail movement (Case <<8_9>>) to move landunits or supplies. Otherwise
+this Phase is omitted.
 
-L. Repair Phase:
+K. Repair Phase:
 
 1. Towing Segment: Player "A" may tow brokendown and recovered vehicles.
 
-2. Maintenance Segment; Player "A" may at
-20
+2. Maintenance Segment; Player "A" may attempt to repair brokendown or destroyed
+vehicles which were not towed in this Phase.
 
-tempt to repair brokendown or destroyed vehicles
-which were not towed in this Phase.
+L. Patrol Phase: If there has been no combat in the current Operations Stage,
+the Phasing Player may use patrols for reconnaissance purpose.
 
-M. Patrol Phase: If there has been no combat in
-the current Operations Stage, the Phasing Player
-may use patrols for reconnaissance purpose.
-
-VI. Second Operations Stage:
+. Second Operations Stage:
 
 Both Players repeat all facets of the First Operations Stage.
 
-VII. Third Operations Stage: Both players repeat
+. Third Operations Stage: Both players repeat
 all facets of the First Operations Stage.
 
-VIII. Strategic Air Recovery Stage (Air Game
+. Strategic Air Recovery Stage (Air Game
 Only)
 
 A. Return to Base Phase: All surviving planes
@@ -289,10 +227,9 @@ their base of origin if possible.
 B. Aircraft Mainterance Phase: Both Players attempt to ready planes that have flown missions
 during the Strategic Air Stage.
 
-IX. End of Game-Turn
+. End of Game-Turn
 
-You have now completed one full game-turn,
-replete with airplanes fuel sandstorms and the lot!
-Congratulations. You may put in for a transfer,
-but before doing so, keep in mind that the Russian
-Front is the only other active theatre.
+You have now completed one full game-turn, replete with airplanes fuel
+sandstorms and the lot!  Congratulations. You may put in for a transfer, but
+before doing so, keep in mind that the Russian Front is the only other active
+theatre.
