--- a/section-49.adoc
+++ b/section-49.adoc
@@ -1,144 +1,113 @@
 [#49_0]
 == FUEL
+
 GENERAL RULE:
 
-Almost every vehicle in the game consumes fuel
-when moving. Players wiil consider a vehicle to
-consume fuel unless it specifically states
-somewhere in the rules that it does not. Fuel is consumed at a consumption rate dependent on the
-vehicle and on the distance travelled. Fuel may
-also be consumed in certain types of construction.
-Players should consult the Section on Construction for the rates.
+Almost every vehicle in the game consumes fuel when moving. Players wiil
+consider a vehicle to consume fuel unless it specifically states somewhere in
+the rules that it does not. Fuel is consumed at a consumption rate dependent on
+the vehicle and on the distance travelled. Fuel may also be consumed in certain
+types of construction.  Players should consult the Section on Construction for
+the rates.
 
-Players must keep track of the amount of fuel
-they have available. This may be done on the Supply Dump Sheets as well as the unit TOE Sheets.
-Fuel being transported by truck convoys will be
-noted on the Truck Convoy Sheet. As fuel is consumed (by usage or evaporation and spillage) or
-increased (by arriving convoys) the Player should
-record the changes in levels immediately.
+Players must keep track of the amount of fuel they have available. This may be
+done on the Supply Dump Sheets as well as the unit TOE Sheets.  Fuel being
+transported by truck convoys will be noted on the Truck Convoy Sheet. As fuel is
+consumed (by usage or evaporation and spillage) or increased (by arriving
+convoys) the Player should record the changes in levels immediately.
 
 [#49_1]
 === FUEL CONSUMPTION RATES
-[#49_11]*[49.11]* All Fuel is considered in terms of Fuel
-Points. The Fuel Point is the basic unit of consumption. A Fuel Point is roughly equivalent to
-250 pounds or 35 gallons of gasoline and auxiliary
-petroleum products: (This rate does not apply to
-the Air Game, where fuel usage has been
-abstracted because of the decrease in the true
-number of sorties flown.)
+[#49_11]*[49.11]* All Fuel is considered in terms of Fuel Points. The Fuel Point
+is the basic unit of consumption. A Fuel Point is roughly equivalent to 250
+pounds or 35 gallons of gasoline and auxiliary petroleum products: (This rate
+does not apply to the Air Game, where fuel usage has been abstracted because of
+the decrease in the true number of sorties flown.)
 
-[#49_12]*[49.12]* Every vehicle in the game consumes fuel
-when it moves, except where specifically noted.
-(e.g. desert raiders and patrols among others, have
-slightly different rules.) Fuel users include HQ's
-with non-parenthesized TOE Strength Points and
-all gun class units. They do not include motorcycles or the towing of tanks and trucks back to
-repair facilities.
+[#49_12]*[49.12]* Every vehicle in the game consumes fuel when it moves, except
+where specifically noted.  (e.g. desert raiders and patrols among others, have
+slightly different rules.) Fuel users include HQ's with non-parenthesized TOE
+Strength Points and all gun class units. They do not include motorcycles or the
+towing of tanks and trucks back to repair facilities.
 
-[#49_13]*[49.13]* Every TOE Strength Point of vehicles has
-a fuel consumption rate and a fuel capability
-rating. The fuel consumption factor is the number
-of Fuel Points consumed for every five Capability
-Points (or fraction thereof) expended by the TOE
-Strength Point for movement (or any type). Note:
-Fuel is not consumed when CP's are expended for
-combat or any other action that does not involve
-actual movement from one hex to another. Example: One TOE Strength Point of tanks with a fuel
-consumption rate of "4" that moved in such a way
-that expends 12 Capability Points would consume
-12 Fuel Points—"4", the fuel consumption rate
-multiplied by ‘'3", the number of groups of 5 CP's
-expended.
+[#49_13]*[49.13]* Every TOE Strength Point of vehicles has a fuel consumption
+rate and a fuel capability rating. The fuel consumption factor is the number of
+Fuel Points consumed for every five Capability Points (or fraction thereof)
+expended by the TOE Strength Point for movement (or any type). Note: Fuel is not
+consumed when CP's are expended for combat or any other action that does not
+involve actual movement from one hex to another. Example: One TOE Strength Point
+of tanks with a fuel consumption rate of "4" that moved in such a way that
+expends 12 Capability Points would consume 12 Fuel Points—"4", the fuel
+consumption rate multiplied by ‘'3", the number of groups of 5 CP's expended.
 
 [#49_14]*[49.14]* The fuel capacity rating is the number of
 
-Fuel Points a TOE Strength Point may have, so to
-speak, in its gas tanks. All vehicles' fuel capacity
-ratings are determined according to the following
+Fuel Points a TOE Strength Point may have, so to speak, in its gas tanks. All
+vehicles' fuel capacity ratings are determined according to the following
 formula:
 
-Fuel capacity rating = CPA x 1/5 x
-fuel consumption rate
+Fuel capacity rating = CPA x 1/5 x fuel consumption rate
 
-Players will note that a TOE Strength Point always
-has a fuel capacity rating exactly sufficient to
-allow allits CPA to be expended on movement.
+Players will note that a TOE Strength Point always has a fuel capacity rating
+exactly sufficient to allow allits CPA to be expended on movement.
 
-[#49_15]*[49.15]* For fuel to be consumed, it must be present in the same hex with the consuming unit/TOE
-Strength Point. Generally, movement of a unit will
-be "counted against'? its fuel capacity
-rating—i.e., the fuel in the unit's gas tanks, which
-by definition is in the same hex at all times—and
-players will have to record how far each land unit
-has been moved since the last time its fuel supply
-was replenished. See also Case <<49_16>>.
+[#49_15]*[49.15]* For fuel to be consumed, it must be present in the same hex
+with the consuming unit/TOE Strength Point. Generally, movement of a unit will
+be "counted against'? its fuel capacity rating—i.e., the fuel in the unit's gas
+tanks, which by definition is in the same hex at all times—and players will have
+to record how far each land unit has been moved since the last time its fuel
+supply was replenished. See also Case <<49_16>>.
 
-[#49_16]*[49.16]* In essence, a unit consumes fuel in the hex
-in which it begins Movement for any Movement
-Segment in the OpStage. It may draw fuel from
-any source in that hex, except for second-third line
-trucks. (Such fuel from convoying trucks must be
-off-loaded first). There is no cost in CP's to "gas
-up". The Player simply notes how far he is going
-to go in that Movement Segment and then subtracts the necessary fuel points from whatever
-source is available in the hex. He then moves the
-unit. If such unit were to move again in that
-OpStage, it would have to draw fuel from the new
-hex or from its own Fuel Capacity  <<49_14>>).
+[#49_16]*[49.16]* In essence, a unit consumes fuel in the hex in which it begins
+Movement for any Movement Segment in the OpStage. It may draw fuel from any
+source in that hex, except for second-third line trucks. (Such fuel from
+convoying trucks must be off-loaded first). There is no cost in CP's to "gas
+up". The Player simply notes how far he is going to go in that Movement Segment
+and then subtracts the necessary fuel points from whatever source is available
+in the hex. He then moves the unit. If such unit were to move again in that
+OpStage, it would have to draw fuel from the new hex or from its own Fuel
+Capacity  <<49_14>>).
 
-[#49_17]*[49.17]* In an emergency, Players may "siphon
-gas." That is, if two units are in a hex, one has fuel
-and the other doesn't, and there is no other fuel
-supply available, the Player may transfer
-some—or all—of the fuel from one unit to the
-other, up to the maximum Fuel Capacity of the
-receiving unit. Such transfer costs 3 CP's to both
-units. Siphoning may occur in any Movement segment. The definition of "emergency" is left to the
-Players. (Note that fuel may be siphoned from
-abandoned or Brokendown enemy vehicles; it may
-not be siphoned from a destroyed vehicle. The
-enemy player should supply the siphoning player
-with the number of fuel points so available—when
-requested.)
+[#49_17]*[49.17]* In an emergency, Players may "siphon gas." That is, if two
+units are in a hex, one has fuel and the other doesn't, and there is no other
+fuel supply available, the Player may transfer some—or all—of the fuel from one
+unit to the other, up to the maximum Fuel Capacity of the receiving unit. Such
+transfer costs 3 CP's to both units. Siphoning may occur in any Movement
+segment. The definition of "emergency" is left to the Players. (Note that fuel
+may be siphoned from abandoned or Brokendown enemy vehicles; it may not be
+siphoned from a destroyed vehicle. The enemy player should supply the siphoning
+player with the number of fuel points so available—when requested.)
 
-[#49_18]*[49.18]* Trucks carrying fuel will also consume
-fuel themselves while they are moving. They may
-consider the fuel they are transporting as a source
-of fuel. It is possible for a truck to consume half of
-its cargo getting from a port to a forward area.
+[#49_18]*[49.18]* Trucks carrying fuel will also consume fuel themselves while
+they are moving. They may consider the fuel they are transporting as a source of
+fuel. It is possible for a truck to consume half of its cargo getting from a
+port to a forward area.
 
-[#49_19]*[49.19]* Fuel is non-denominational. It can be used by either player, making a supply dump a
-worthwhile objective.
+[#49_19]*[49.19]* Fuel is non-denominational. It can be used by either player,
+making a supply dump a worthwhile objective.
 
 [#49_2]
 === TRANSPORTATION OF FUEL
 
-Fuel may be transported from one place to another
-by trucks, trains and, in some cases, planes. Fuel
-may never be "transported" by tanks or other
-such vehicles. Walking infantry may never
-transport fuel. (How would you like to cross the
-desert carrying a 20 pound jerry-can filled with
-gasoline?) See the Truck Characteristics Chart for
-the amount of Fuel Points that can be carried ona
-truck and Aircraft Characteristics Chart for the
-transport tonnage capacity of planes.
+Fuel may be transported from one place to another by trucks, trains and, in some
+cases, planes. Fuel may never be "transported" by tanks or other such vehicles.
+Walking infantry may never transport fuel. (How would you like to cross the
+desert carrying a 20 pound jerry-can filled with gasoline?) See the Truck
+Characteristics Chart for the amount of Fuel Points that can be carried ona
+truck and Aircraft Characteristics Chart for the transport tonnage capacity of
+planes.
 
 [#49_3]
 === EVAPORATION AND SPILLAGE
 
-Fuel is subject to loss through evaporation and
-spillage, regardless of where it is kept. During the
-Stores Expenditure Stage of each game-turn,-each
-Player reduces a// fuel levels on the game-map (not
-in convoys at sea) by six percent (6%), rounded
-down. In addition, if the weather for an operations stage is ‘“‘hot weather", an additional reduction of five per-cent (5%) is taken as soon as the
-hot weather is determined. There is one exception
-
-to these rates: from Sept., 1940 until the last
-Game-Turn (inclusive) in August, 1941, the Commonwealth spillage and evaporation rate is mime
-percent (9%) per Game-turn. This is due to the
-poorly constructed containers used by the British;
-it wasn't until the British copied that German
-‘erry can" that their rate was reduced (This rule
-also applies to certain sources of water, see <<52_44>>.)
+Fuel is subject to loss through evaporation and spillage, regardless of where it
+is kept. During the Stores Expenditure Stage of each game-turn,-each Player
+reduces a// fuel levels on the game-map (not in convoys at sea) by six percent
+(6%), rounded down. In addition, if the weather for an operations stage is
+"hot weather", an additional reduction of five per-cent (5%) is taken as soon
+as the hot weather is determined. There is one exception to these rates: from
+Sept., 1940 until the last Game-Turn (inclusive) in August, 1941, the
+Commonwealth spillage and evaporation rate is mime percent (9%) per Game-turn.
+This is due to the poorly constructed containers used by the British; it wasn't
+until the British copied that German ‘erry can" that their rate was reduced
+(This rule also applies to certain sources of water, see <<52_44>>.)
